# CChat_server

./: .clang-format  .gitignore  CMakeLists.txt  README.md
ChatServer/: CMakeLists.txt  REMDME.md  config.ini  main.cc
ChatServer/proto/: chat_service.proto
ChatServer/src/: asio_io_service_pool.cc  asio_io_service_pool.h  common.cc  common.h  configmgr.cc  configmgr.h  cserver.cc  cserver.h  csession.cc  csession.h  dist_lock.cc  dist_lock.h  env.cc  env.h  grpc_chat_service_impl.cc  grpc_chat_service_impl.h  grpc_client.cc  grpc_client.h  logger.hpp  logic_system.cc  logic_system.h  msg_node.cc  msg_node.h  mysql_dao.cc  mysql_dao.h  mysql_mgr.cc  mysql_mgr.h  redis_mgr.cc  redis_mgr.h  user_mgr.cc  user_mgr.h
Common/: CMakeLists.txt
Common/src/: asio_io_service_pool.cc  asio_io_service_pool.h  common.cc  common.h  configmgr.cc  configmgr.h  dist_lock.cc  logger.hpp  mysql_dao.cc  mysql_dao.h  mysql_mgr.cc  mysql_mgr.h  redis_mgr.cc  redis_mgr.h  singleton.h
GateServer/: CMakeLists.txt  config.ini  main.cc
GateServer/proto/: message.proto  verify_service.proto
GateServer/src/: asio_io_service_pool.cc  asio_io_service_pool.h  common.cc  common.h  configmgr.cc  configmgr.h  cserver.cc  cserver.h  grpc_client.cc  grpc_client.h  grpc_server.h  httpconnection.cc  httpconnection.h  logicsystem.cc  logicsystem.h  mysql_dao.cc  mysql_dao.h  mysql_mgr.cc  mysql_mgr.h  redis_mgr.cc  redis_mgr.h  singleton.h  verifygrpcclient.cc  verifygrpcclient.h
GateServer/tests/: CMakeLists.txt  test_boost.cc  test_jsoncpp.cc  test_mysql.cc  test_redis.cc  test_redis_mgr.cc  test_spdlog.cc
StatusServer/: CMakeLists.txt  config.ini  main.cc
StatusServer/proto/: chat_service.proto  status_service.proto
StatusServer/src/: asio_io_service_pool.cc  common.cc  common.h  configmgr.cc  configmgr.h  dist_lock.cc  dist_lock.h  logger.hpp  redis_mgr.cc  redis_mgr.h  status_service_impl.cc  status_service_impl.h
StatusServer/tests/: CMakeLists.txt
VerifyServer/: config.json  package-lock.json  package.json  server.js
VerifyServer/src/: common.js  config.js  email.js  proto.js  redis.js
_proto/: chat_service.proto  status_service.proto
_sql/: table.sql
cmake/: utils.cmake
